--- a/PriseEnMain.ipynb
+++ b/PriseEnMain.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "non-default argument follows default argument (2803328332.py, line 140)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[25], line 140\u001b[0;36m\u001b[0m\n\u001b[0;31m    def get_action(self, state, epsilon=None,env):\u001b[0m\n\u001b[0m                                             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m non-default argument follows default argument\n"
+     ]
+    }
+   ],
    "source": [
     "# Imports\n",
     "import sys\n",
@@ -160,44 +169,20 @@
     "    def decrease_epsilon(self):\n",
     "        self.epsilon = self.epsilon_min + (self.epsilon_start - self.epsilon_min) * (\n",
     "            np.exp(-1.0 * self.n_eps / self.decrease_epsilon_factor)\n",
-    "        )\n",
-    "\n",
-    "    def reset(self):\n",
-    "        hidden_size = 128\n",
-    "\n",
-    "        obs_size = self.observation_space.shape[0]\n",
-    "        n_actions = self.action_space.n\n",
-    "\n",
-    "        self.buffer = ReplayBuffer(self.buffer_capacity)\n",
-    "        self.q_net = Net(obs_size, hidden_size, n_actions)\n",
-    "        self.target_net = Net(obs_size, hidden_size, n_actions)\n",
-    "\n",
-    "        self.loss_function = nn.MSELoss()\n",
-    "        self.optimizer = optim.Adam(\n",
-    "            params=self.q_net.parameters(), lr=self.learning_rate\n",
-    "        )\n",
-    "\n",
-    "        self.epsilon = self.epsilon_start\n",
-    "        self.n_steps = 0\n",
-    "        self.n_eps = 0"
+    "        )\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'DQN' object has no attribute 'get_q'",
+     "ename": "SyntaxError",
+     "evalue": "positional argument follows keyword argument (1251903171.py, line 62)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb Cell 2\u001b[0m line \u001b[0;36m7\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=71'>72</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m losses\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m \u001b[39m# Run the training loop\u001b[39;00m\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=75'>76</a>\u001b[0m losses \u001b[39m=\u001b[39m train(env, agent, N_episodes)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=77'>78</a>\u001b[0m plt\u001b[39m.\u001b[39mplot(losses)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=79'>80</a>\u001b[0m \u001b[39m# Evaluate the final policy\u001b[39;00m\n",
-      "\u001b[1;32m/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb Cell 2\u001b[0m line \u001b[0;36m5\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=52'>53</a>\u001b[0m state, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mreset()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=53'>54</a>\u001b[0m \u001b[39mwhile\u001b[39;00m \u001b[39mnot\u001b[39;00m done: \n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=54'>55</a>\u001b[0m     action \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39;49mget_action(state)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=56'>57</a>\u001b[0m     next_state, reward, terminated, truncated, _ \u001b[39m=\u001b[39m env\u001b[39m.\u001b[39mstep(action)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=57'>58</a>\u001b[0m     loss_val \u001b[39m=\u001b[39m agent\u001b[39m.\u001b[39mupdate(state, action, reward, terminated, next_state)\n",
-      "\u001b[1;32m/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=147'>148</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m env\u001b[39m.\u001b[39maction_space\u001b[39m.\u001b[39msample()\n\u001b[1;32m    <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=148'>149</a>\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> <a href='vscode-notebook-cell:/Users/alexisbadard/Desktop/Cours_3A/IA/RL/RL/PriseEnMain.ipynb#W1sZmlsZQ%3D%3D?line=149'>150</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m np\u001b[39m.\u001b[39margmax(\u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mget_q(state))\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'DQN' object has no attribute 'get_q'"
+      "\u001b[0;36m  Cell \u001b[0;32mIn[26], line 62\u001b[0;36m\u001b[0m\n\u001b[0;31m    action = agent.get_action(state, epsilon=None,env)\u001b[0m\n\u001b[0m                                                     ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m positional argument follows keyword argument\n"
      ]
     }
    ],
@@ -248,17 +233,76 @@
     "        episode_rewards[i] = reward_sum\n",
     "    return episode_rewards\n",
     "\n",
-    "def train(env, agent, N_episodes, eval_every=10, reward_threshold=300):\n",
+    "def train_1(env, agent, N_episodes, eval_every=10, reward_threshold=300):\n",
+    "    total_time = 0\n",
+    "    losses = []\n",
+    "    episode_rewards = []\n",
+    "    \n",
+    "    for ep in range(N_episodes):\n",
+    "        state, _ = env.reset()\n",
+    "        episode_reward = 0\n",
+    "        done = False\n",
+    "        print('ep:'+str(ep))\n",
+    "        i=0\n",
+    "        while not done:\n",
+    "            print('i:'+str(i))\n",
+    "            i+=1\n",
+    "            # Select action using epsilon-greedy policy\n",
+    "            action = agent.get_action(state, epsilon=None)\n",
+    "            print(action)\n",
+    "            \n",
+    "            # Take a step in the environment\n",
+    "            next_state, reward, terminated, truncated, _= env.step(action)\n",
+    "            \n",
+    "            # Update total episode reward\n",
+    "            episode_reward += reward\n",
+    "            \n",
+    "            # Store the transition in the replay buffer and train the agent\n",
+    "            #agent.store_transition(state, action, reward, next_state, done)\n",
+    "            loss_val = agent.update(state, action, reward, terminated, next_state)\n",
+    "            if loss_val is not None:\n",
+    "                losses.append(loss_val)\n",
+    "\n",
+    "            state = next_state\n",
+    "            total_time += 1\n",
+    "            done = terminated or truncated\n",
+    "\n",
+    "        episode_rewards.append(episode_reward)\n",
+    "\n",
+    "        if (ep + 1) % eval_every == 0:\n",
+    "            rewards = eval_agent(agent, env)\n",
+    "            print(\"episode =\", ep+1, \", reward = \", np.mean(rewards))\n",
+    "            if np.mean(rewards) >= reward_threshold:\n",
+    "                break\n",
+    "\n",
+    "    return losses\n",
+    "\n",
+    "def train_2(env, agent, N_episodes, eval_every=10, reward_threshold=300):\n",
     "    total_time = 0\n",
     "    state, _ = env.reset()\n",
     "    losses = []\n",
     "    for ep in range(N_episodes):\n",
+    "        print(ep)\n",
     "        done = False\n",
     "        state, _ = env.reset()\n",
+    "        i=0\n",
     "        while not done: \n",
+    "            i+=1\n",
+    "            print(i)\n",
+    "            state, _ = env.reset()\n",
     "            action = agent.get_action(state)\n",
     "\n",
     "            next_state, reward, terminated, truncated, _ = env.step(action)\n",
+    "            print(next_state)\n",
+    "            print('******')\n",
+    "            print(reward)\n",
+    "            print('******')\n",
+    "            print(terminated)\n",
+    "            print('******')\n",
+    "            print(truncated)\n",
+    "            print('******')\n",
+    "            print(_)\n",
+    "\n",
     "            loss_val = agent.update(state, action, reward, terminated, next_state)\n",
     "\n",
     "            state = next_state\n",
@@ -275,16 +319,35 @@
     "                \n",
     "    return losses\n",
     "\n",
-    "    \n",
+    "def reset(self):\n",
+    "    hidden_size = 128\n",
+    "\n",
+    "    obs_size = self.observation_space.shape[0]\n",
+    "    n_actions = self.action_space.n\n",
+    "\n",
+    "    self.buffer = ReplayBuffer(self.buffer_capacity)\n",
+    "    self.q_net = Net(obs_size, hidden_size, n_actions)\n",
+    "    self.target_net = Net(obs_size, hidden_size, n_actions)\n",
+    "\n",
+    "    self.loss_function = nn.MSELoss()\n",
+    "    self.optimizer = optim.Adam(\n",
+    "        params=self.q_net.parameters(), lr=self.learning_rate\n",
+    "    )\n",
+    "\n",
+    "    self.epsilon = self.epsilon_start\n",
+    "    self.n_steps = 0\n",
+    "    self.n_eps = 0\n",
+    "\n",
+    "\n",
     "# Run the training loop\n",
-    "losses = train(env, agent, N_episodes)\n",
+    "losses = train_1(env, agent, N_episodes)\n",
     "\n",
     "plt.plot(losses)\n",
     "\n",
     "# Evaluate the final policy\n",
     "rewards = eval_agent(agent, env, 20)\n",
     "print(\"\")\n",
-    "print(\"mean reward after training = \", np.mean(rewards))"
+    "print(\"mean reward after training = \", np.mean(rewards))\n"
    ]
   },
   {
